# mr_ws

./: .gitignore  README.md
install/: local_setup.sh  setup.sh
install/Stage/lib/: libstage.so.4.3.0
install/Stage/lib/pkgconfig/: stage.pc
install/Stage/share/Stage/: package.sh
install/cart_launch/share/cart_launch/: local_setup.sh  package.sh
install/cart_launch/share/cart_launch/launch/: cart.launch.py  cart_stage.launch.py
install/simple_controller/lib/simple_controller/: controller_node
install/simple_controller/share/simple_controller/: local_setup.sh  package.sh
install/simple_controller/share/simple_controller/rqt_cfg/: steer_error.perspective
install/stage_controller/lib/stage_controller/: stage_controller  stage_throttle
install/stage_controller/share/stage_controller/: local_setup.sh  package.sh
install/stage_ros2/lib/stage_ros2/: stage_ros2
install/stage_ros2/share/stage_ros2/: local_setup.sh  package.sh
log/: latest_build
src/cart_launch/launch/: cart_stage.launch.py
src/mpc_controller/: CMakeLists.txt  package.xml
src/mpc_controller/include/mpc_controller/: mpc.h  mpc_controller.h
src/mpc_controller/launch/: controller.yaml  controller_stage.launch.py  start_gzclient  start_rqt
src/mpc_controller/rviz/: traj.rviz2  traj1.rviz  zg.rviz2.rviz
src/mpc_controller/src/: mpc.cpp  mpc_controller.cpp  mpc_controller.cpp.back  mpc_controller_node.cpp
src/simple_controller/: CMakeLists.txt  package.xml
src/simple_controller/include/simple_controller/: controller.h  trajectory_segment.h
src/simple_controller/launch/: controller.yaml  controller_stage.launch.py
src/simple_controller/scripts/: start_rqt
src/simple_controller/src/: controller.cpp  controller_node.cpp  test1.cpp  velocity_publisher.cpp
src/simple_map/: CMakeLists.txt  package.xml
src/simple_map/launch/: map.launch.py
src/simple_map/rviz/: map.rviz  map1.rviz
src/simple_map/src/: simple_map.cpp
src/stage_controller/src/: stage_controller.cpp  stage_throttle.cpp
src/velocity_controller/: CMakeLists.txt  package.xml
src/velocity_controller/include/velocity_controller/: velocity_controller.h
src/velocity_controller/launch/: controller.launch.py  test.launch.py  throttle_cart.launch.py  vel_error.perspective  velocity_controller.launch.back  velocity_controller.launch.py
src/velocity_controller/src/: velocity_controller.cpp  velocity_test.cpp
