<?xml version="1.0"?>
<package format="3">
  <name>simple_map</name>
  <version>0.0.0</version>
  <description>The simple_map package</description>

  <!-- One maintainer tag required -->
  <maintainer email="user@todo.todo">user</maintainer>

  <!-- License -->
  <license>TODO</license>

  <!-- Dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build dependencies -->
  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>


  <!-- Test dependencies (optional) -->
  <test_depend>ament_cmake_gtest</test_depend>

  <!-- Export -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
